--- a/wml-product-recommendation-engine.ipynb
+++ b/wml-product-recommendation-engine.ipynb
@@ -1,76 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Build a product recommendation engine\n",
-    "\n",
-    "![](https://raw.githubusercontent.com/IBM/product-recommendation-with-watson-ml/master/doc/source/images/shopping.png)\n",
-    "\n",
-    "This notebook contains steps and code to create a recommendation engine based on shopping history, deploy that model to Watson Machine Learning, and create an app with PixieApps. This notebook runs on Python 3.x with Apache Spark 2.1.\n",
-    "\n",
-    "## Learning Goals\n",
-    "\n",
-    "The learning goals of this notebook are:\n",
-    "\n",
-    "* Load a CSV file into the Object Storage service linked to your Watson Studio\n",
-    "* Use the *k*-means algorithm, which is useful for cluster analysis in data mining, to segment customers into clusters for the purpose of making an in-store purchase recommendation\n",
-    "* Deploy the model to the IBM Watson Machine Learning service in IBM Cloud to create your recommendation application"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Table of contents\n",
-    "\n",
-    "1. [Setup](#setup)<br>\n",
-    "2. [Load and explore data](#load)<br>\n",
-    "3. [Create a KMeans model](#kmeans)<br>\n",
-    "   3.1. [Prepare data](#prepare_data)<br>\n",
-    "   3.2. [Create clusters and define the model](#build_model)<br>\n",
-    "4. [Persist the model](#persist)<br>\n",
-    "5. [Deploy the model to the cloud](#deploy)<br>\n",
-    "   5.1. [Create deployment for the model](#create_deploy)<br>\n",
-    "   5.2. [Test model deployment](#test_deploy)<br>\n",
-    "6. [Create product recommendations](#create_recomm)<br>\n",
-    "   6.1. [Test product recommendations model](#test_recomm)<br>\n",
-    "7. [Summary and next steps](#summary)<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. Setup\n",
-    "\n",
-    "\n",
-    "Before you use the sample code in this notebook, you must perform the following setup tasks:\n",
-    "\n",
-    "* Create a Watson Machine Learning service instance (a free plan is offered) and associate it with your project\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'll be using a few libraries for this exercise:\n",
-    "\n",
-    "1. [Watson Machine Learning Client](http://wml-api-pyclient.mybluemix.net/): Client library to work with the Watson Machine Learning service on IBM Cloud. Library available on [pypi](https://pypi.org/project/watson-machine-learning-client/). Service available on [IBM Cloud](https://cloud.ibm.com/catalog/services/machine-learning).\n",
-    "1. [Pixiedust](https://github.com/pixiedust/pixiedust): Python Helper library for Jupyter Notebooks. Available on [pypi](https://pypi.org/project/pixiedust/).\n",
-    "1. [ibmos2spark](https://github.com/ibm-watson-data-lab/ibmos2spark): Facilitates Data I/O between Spark and IBM Object Storage services"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'c:\\msys64\\mingw64\\bin\\python.exe' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'c:/msys64/mingw64/bin/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
-    "!pip install --upgrade ibmos2spark\n",
-    "!pip install --upgrade pixiedust\n",
-    "!pip install --upgrade watson-machine-learning-client"
+    "%pip install --upgrade ibmos2spark\n",
+    "%pip install --upgrade pixiedust\n",
+    "%pip install --upgrade watson-machine-learning-client"
    ]
   },
   {
@@ -83,16 +32,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"load\"></a>\n",
-    "## 2. Load and explore data\n",
-    "\n",
-    "In this section you will load the data file that contains the customer shopping data using PixieDust's [`sampleData`](https://pixiedust.github.io/pixiedust/loaddata.html) method:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -101,13 +40,6 @@
    "outputs": [],
    "source": [
     "df = pixiedust.sampleData('https://raw.githubusercontent.com/IBM/product-recommendation-with-watson-ml/master/data/customers_orders1_opt.csv')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To better examine and visualize the data, run the following cell to view it in a table format. Note that Pixiedust's `display` method can also render data using various chart types, such as pie charts, line graphs, and scatter plots."
    ]
   },
   {
@@ -127,18 +59,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"kmeans\"></a>\n",
-    "## 3. Create a *k*-means model with Spark\n",
-    "\n",
-    "In this section of the notebook you use the *k*-means implementation to associate every customer to a cluster based on their shopping history.\n",
-    "\n",
-    "First, import the Apache Spark Machine Learning packages ([MLlib](http://spark.apache.org/docs/2.2.0/api/python/pyspark.ml.html)) that you need in the subsequent steps:\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -149,16 +69,6 @@
     "from pyspark.ml.clustering import KMeansModel\n",
     "from pyspark.ml.feature import VectorAssembler\n",
     "from pyspark.ml.linalg import Vectors"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"prepare_data\"></a>\n",
-    "### 3.1 Prepare data\n",
-    "\n",
-    "Create a new data set with just the data that you need. Filter the columns that you want, in this case the customer ID column and the product-related columns. Remove the columns that you don't need for aggregating the data and training the model:"
    ]
   },
   {
@@ -174,13 +84,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Run the `display()` command again, this time to view the filtered information:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -193,13 +96,6 @@
    "outputs": [],
    "source": [
     "display(df_filtered)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, aggregate the individual transactions for each customer to get a single score per product, per customer."
    ]
   },
   {
@@ -220,22 +116,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"build_model\"></a>\n",
-    "### 3.2 Create clusters and define the model \n",
-    "\n",
-    "Create 100 clusters with a *k*-means model based on the number of times a specific customer purchased a product.\n",
-    "\n",
-    "| No Clustering | Clustering |\n",
-    "|------|------|\n",
-    "|  ![](https://raw.githubusercontent.com/IBM/product-recommendation-with-watson-ml/master/doc/source/images/kmeans-1.jpg)  | ![](https://raw.githubusercontent.com/IBM/product-recommendation-with-watson-ml/master/doc/source/images/kmeans-2.jpg) |\n",
-    "\n",
-    "First, create a feature vector by combining the product and quantity columns:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -251,13 +131,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, create the *k*-means clusters and the pipeline to define the model:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -266,13 +139,6 @@
     "kmeans = KMeans(maxIter=50, predictionCol=\"cluster\").setK(100).setSeed(1)  # Initialize model\n",
     "pipeline = Pipeline(stages=[assembler, kmeans])\n",
     "model = pipeline.fit(df_customer_products)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Finally, calculate the cluster for each customer by running the original dataset against the *k*-means model: "
    ]
   },
   {
@@ -290,27 +156,6 @@
    "source": [
     "df_customer_products_cluster = model.transform(df_customer_products)\n",
     "display(df_customer_products_cluster)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"persist\"></a>\n",
-    "## 4. Persist the model \n",
-    "\n",
-    "In this section you will learn how to store your pipeline and model in Watson Machine Learning repository by using Python client libraries."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4.1 Configure IBM Watson Machine Learning credentials\n",
-    "\n",
-    "To access your machine learning repository programmatically, you need to copy in your credentials, which you can see in your **IBM Watson Machine Learning** service details in IBM Cloud.\n",
-    "\n",
-    "> **IMPORTANT**: Update `apikey` and `instance_id` below. Credentials can be found on _Service Credentials_ tab of the Watson Machine Learning service instance created on the IBM Cloud."
    ]
   },
   {
@@ -334,13 +179,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Connect to the Watson Machine Learning service using the provided credentials."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -352,32 +190,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4.2 Save the model \n",
-    "\n",
-    "#### Save the model to the Watson Machine Learning repository\n",
-    "\n",
-    "You use the Watson Machine Learning client's [Repository class](http://wml-api-pyclient.mybluemix.net/#repository) to store and manage models in the Watson Machine Learning service. \n",
-    "\n",
-    "> **NOTE**: You can also use Watson Studio to manage models. In this notebook we are using the client library instead."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_data = df_customer_products.withColumnRenamed('CUST_ID', 'label')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> **TIP**: Update the cell below with your name, email, and name you wish to give to your model."
    ]
   },
   {
@@ -392,33 +210,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> **NOTE**: You can delete a model from the repository by calling `client.repository.delete`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Display list of existing models in the Watson Machine Learning repository "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "client.repository.list_models()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Display information about the saved model"
    ]
   },
   {
@@ -434,31 +231,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"deploy\"></a>\n",
-    "## 5. Deploy model to the IBM cloud\n",
-    "\n",
-    "You use the Watson Machine Learning client's [Deployments class](http://wml-api-pyclient.mybluemix.net/#deployments) to deploy and score models.\n",
-    "\n",
-    "### 5.1 Create an online deployment for the model\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "created_deployment = client.deployments.create(saved_model_uid, 'Shopping Recommendation Engine Deployment')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 5.2 Retrieve the scoring endpoint for this model"
    ]
   },
   {
@@ -472,16 +250,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"test_deploy\"></a>\n",
-    "### 5.3 Test the deployed model\n",
-    "\n",
-    "To verify that the model was successfully deployed to the cloud, you'll specify a customer ID, for example customer 12027, to predict this customer's cluster against the Watson Machine Learning deployment, and see if it matches the cluster that was previously associated this customer ID."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -489,13 +257,6 @@
    "source": [
     "customer = df_customer_products_cluster.filter('CUST_ID = 12027').collect()\n",
     "print(\"Previously calculated cluster = {}\".format(customer[0].cluster))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To determine the customer's cluster using Watson Machine Learning, you need to load the customer's purchase history. This function uses the local data frame to select every product field and the number of times that customer 12027 purchased a product."
    ]
   },
   {
@@ -519,13 +280,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This function takes the customer's purchase history and calls the scoring endpoint:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -538,13 +292,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Finally, call the functions defined above to get the product history, call the scoring endpoint, and get the cluster associated to customer 12027:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -554,18 +301,6 @@
     "fields = product_counts[0]\n",
     "values = product_counts[1]\n",
     "print(\"Cluster calculated by Watson ML = {}\".format(get_cluster_from_watson_ml(fields, values)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"create_recomm\"></a>\n",
-    "## 6. Create product recommendations\n",
-    "\n",
-    "Now you can create some product recommendations.\n",
-    "\n",
-    "First, run this cell to create a function that queries the database and finds the most popular items for a cluster. In this case, the **df_customer_products_cluster** dataframe is the database."
    ]
   },
   {
@@ -586,13 +321,6 @@
     "    sortedItems = sorted(items, key=lambda x: x[1], reverse=True) # Sort by score\n",
     "    popular = [x for x in sortedItems if x[1] > 0]\n",
     "    return popular"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, run this cell to create a function that will calculate the recommendations based on a given cluster. This function finds the most popular products in the cluster, filters out products already purchased by the customer or currently in the customer's shopping cart, and finally produces a list of recommended products."
    ]
   },
   {
@@ -625,13 +353,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, run this cell to create a function that produces a list of recommended items based on the products and quantities in a user's cart. This function uses Watson Machine Learning to calculate the cluster based on the shopping cart contents and then calls the **get_recommendations_by_cluster** function."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -653,13 +374,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Run this cell to create a function that produces a list of recommended items based on the purchase history of a customer. This function uses Watson Machine Learning to calculate the cluster based on the customer's purchase history and then calls the **get_recommendations_by_cluster** function."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -674,13 +388,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now you can take customer 12027 and produce a recommendation based on that customer's purchase history:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -690,35 +397,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, take a sample shopping cart and produce a recommendation based on the items in the cart:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "get_recommendations_for_shopping_cart(['Diapers','Baby wash','Oatmeal'],[1,2,1])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The next optional section outlines how you can easily expose recommendations to notebook users, for example for test purposes.\n",
-    "\n",
-    "<a id=\"test_recomm\"></a>\n",
-    "### 6.1 Test product recommendations model\n",
-    "\n",
-    "You can interactively test your product recommendations model using a simple PixieApp. [PixieApps](https://pixiedust.github.io/pixiedust/pixieapps.html) encapsulate business logic and data visualizations, making it easy for notebook users to explore data without having to write any code. Typically these applications are pre-packaged and imported into a notebook. However, for illustrative purposes we've embedded the product recommendation source code in this notebook.\n",
-    "\n",
-    "![](https://raw.githubusercontent.com/IBM/product-recommendation-with-watson-ml/master/doc/source/images/product_recommendation_app.png\")\n",
-    "\n",
-    "Run the cell below, add items to the shopping cart and click the _Refresh_ button to review the recommendation results."
    ]
   },
   {
@@ -852,22 +536,13 @@
     "#run the app\n",
     "RecommenderPixieApp().run(runInDialog='false')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## <font color=green>Congratulations</font>, you've sucessfully created a recommendation engine, deployed it to the Watson Machine Learning service, and created a PixieApp!\n",
-    "\n",
-    "You can now switch to the Watson Machine Learning console to deploy the model and then test it in application, or continue within the notebook to deploy the model using the APIs."
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6 with Spark",
-   "language": "python3",
-   "name": "python36"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -879,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
